version 3.0.0 [not released]
- total rewrite of Connection
- expose a new interface using Rx (IObservable)
- future are now a TPL Task returning a list of results
- improved throughput using LongRunning connection type
- NuGet support for net40 and net45 binaries
- performance report is asynchronous

version 2.3.1
- fixed connection leak on read error

version 2.3.0
- fixed stalled client 
- instrumentation for performance tracing client & server side
- configurable Cluster type (see ClusterConfig.Type)
- break the interface (splitting ICqlCommand & IPreparedQuery) - be sure to read NEWS.txt

version 2.2.1
- added version in Zip & NuGet
- cqlplus is in NuGet lib folder, only CassandraSharp.dll is then referenced
- fixed issue 26 (https://github.com/pchalamet/cassandra-sharp/issues/26)

version 2.2.0
- POCO is now using DynamicMethod instead of Reflection
- support for IDeserializationCallback
- fix failure on connection when IO errors
- merge "Cassandra-Sharp write performance Vs Thrift Client" from hjarraya
- fix authentication issues (https://github.com/pchalamet/cassandra-sharp/issues/25)

version 2.1.2
- fixed issue 9 (https://github.com/pchalamet/cassandra-sharp/issues/9)
- read again asap if buffering mode 
- fixd invalid utf8 string len when using char >= 0x80
- prepared statements can recover from connection failure
- fixed issue 8 (https://github.com/pchalamet/cassandra-sharp/issues/8)
- fixed issue 10 (https://github.com/pchalamet/cassandra-sharp/issues/10)
- fixed issue 11 (https://github.com/pchalamet/cassandra-sharp/issues/11)

version 2.1.1
- fixed issue 5 (https://github.com/pchalamet/cassandra-sharp/issues/5

version 2.1.0.0
- node discovery implementation
- fixed guid serialization
- dynamic column width
- fixed eventually incorrect order of column in cqlplus
- fixed connection recovery (OnFailure event)
- use object (supporting anonyous type) instead of object[] for prepared statement
- one less tpl task per request & waiting is done via tpl
